# A-S-K

./: .gitignore  CONTRIBUTING.md  GLYPHS.md  LICENSE  NOTICE  README.md  RECONCILIATION.md  chainlit_app.py  main.py  pyproject.toml  requirements.txt  run_syntax_test.py  test_syntax.py
data/: decoded_words.jsonl  glyph_fields.json  glyphs.db  glyphs.json  glyphs_merged.json
data/guesses/: ddbcae9e-50a3-4fc7-90fa-7d49bbb6e0e2.json
public/elements/: ASKDecode.jsx  ASKSyntax.jsx
src/a_s_k.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ask/: __init__.py  audit.py  cli.py  cli_enhanced.py  cli_fields.py  enhanced_factorizer.py  extractor.py  factorizer.py  glyph_fields.py  glyphs.py  glyphs_fields.py  merged_glyphs.py  merged_glyphs_db.py  state_syntax.py
src/ask/CLI/: main.py
src/ask/core/: db.py  services.py
src/ask/mcp/: fastmcp_server.py  server.py
src/ask/web/: app.py
tests/: test_cli_help.py  test_enhanced.py  test_factorizer.py  test_fields.py  test_mcp_guess.py  test_readme_examples.py
tools/: load_sqlite.py  materialize_cache.py  merge_glyph_datasets.py
